<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/healthGoalFragment"
        android:icon="@drawable/health_goal"
        android:title="@string/nav_health" />
    <item
        android:id="@+id/reportFragment"
        android:icon="@drawable/report"
        android:title="@string/nav_report" />
    <item
        android:id="@+id/goalFragment"
        android:icon="@drawable/goal"
        android:title="@string/nav_goal" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile"
        android:title="@string/nav_profile" />
</menu>
